# zkpfl

./: README.md  package-lock.json  package.json
contracts/: Cargo.toml
contracts/src/: lib.rs  zk_compute.rs
src/main/: Main.ts  WalletIntegration.ts  index.html
src/main/contract/: averageweights.ts  averageweightsapi.ts
